Adding in redirect

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ name: aaronallport.com
 markdown: redcarpet
 pygments: true
 exclude: [metrics, node_modules, scss, Gruntfile.js, package.json, README.md, .scss-lint.yml]
+gems:
+  - jekyll-redirect-from
