--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 name: aaronallport.com
 kramdown:
     input: GFM
+highlighter: rouge
 pygments: true
 exclude: [metrics, node_modules, scss, Gruntfile.js, package.json, README.md, .scss-lint.yml]
 gems:
